# GameSolution

./: .gitignore  CLAUDE.md  GameSolution.sln  README.md  vcpkg.json
GameProject/: Application.cpp  Application.h  AudioManager.cpp  AudioManager.h  ConsoleUtils.cpp  ConsoleUtils.h  Entity.h  GameLoop.cpp  GameLoop.h  GameManager.cpp  GameManager.h  GameProject.vcxproj  GameProject.vcxproj.filters  GameState.h  GenerateVersion.bat  Logger.cpp  Logger.h  MainMenuState.cpp  MainMenuState.h  MathUtils.h  NetworkManager.cpp  NetworkManager.h  PlayingState.cpp  PlayingState.h  RaylibRenderer.cpp  RaylibRenderer.h  Renderer.h  Sprite.cpp  Sprite.h  Version.h  main.cpp  packages.config
GameProject/include/core/: Application.h
GameProject/include/game/: Entity.h  GameManager.h
GameProject/include/network/: NetworkManager.h
GameProject/include/renderer/: Renderer.h
GameProject/src/audio/: AudioManager.cpp
GameProject/src/core/: Application.cpp  GameLoop.cpp
GameProject/src/game/: Entity.cpp  GameManager.cpp
GameProject/src/network/: NetworkManager.cpp
GameProject/src/renderer/: Sprite.cpp
GameProject/src/utils/: Logger.cpp
GameTests/: CMakeLists.txt
GameTests/tests/: test_AudioManager.cpp  test_GameLoop.cpp  test_GameManager.cpp  test_Logger.cpp  test_MathUtils.cpp  test_NetworkManager.cpp  test_RenderColor.cpp  test_Sprite.cpp
